# dockerize-django-with-nextjs

./: .dockerignore  README.md  docker-compose.yaml  pyproject.toml  sample.env
apps/docker/nginx/: Dockerfile  nginx.conf
apps/docker/web/: Dockerfile
apps/docker/www/: Dockerfile
apps/web/: .env  requirements.txt
apps/web/backend/: settings.py
apps/web/custom_commands/: apps.py
apps/web/custom_commands/management/commands/: superuser.py
apps/web/scripts/: collectstatic.sh  createsuperuser.sh  entrypoint.sh  migrations.sh
apps/www/: package.json  server.js
apps/www/constants/: index.js
apps/www/src/pages/: index.tsx
docs/: docker.md
