[tool.poetry]
name = "dockerize-django-with-nextjs"
version = "0.1.0"
description = ""
authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]
readme = "README.md"
packages = [{include = "dockerize_django_with_nextjs"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">3.2,<3.3"
python-decouple = "^3.8"
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
